# Django_website

./: README.md  manage.py  pyproject.toml
Trans_Build_Invest/: asgi.py  settings.py  urls.py  wsgi.py
main/: urls.py  views.py
main/templates/main/: about.html  base.html  index.html
